拉勾网爬虫

--- a/Practice/LagouWebCrawer.ipynb
+++ b/Practice/LagouWebCrawer.ipynb
@@ -2,21 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-ebb3b2a0",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (DataAnalysis)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -29,6 +47,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
