评分卡测试

--- a/Kaggle/Titanic/titanic.ipynb
+++ b/Kaggle/Titanic/titanic.ipynb
@@ -25,32 +25,14 @@
     "from sklearn.linear_model import LogisticRegression, LogisticRegressionCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "import xgboost as xgb\n"
+    "import xgboost as xgb"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/danielzhang/Documents/Python-Projects/DataAnalysis'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "%pwd"
+    "定位到目录"
    ]
   },
   {
@@ -66,11 +48,30 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[Errno 2] No such file or directory: 'Kaggle/Titanic/'\n",
       "/Users/danielzhang/Documents/Python-Projects/DataAnalysis/Kaggle/Titanic\n"
      ]
     },
@@ -80,7 +81,7 @@
        "'/Users/danielzhang/Documents/Python-Projects/DataAnalysis/Kaggle/Titanic'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   },
   "pycharm": {
    "stem_cell": {
