--- a/Practice/xgboost.ipynb
+++ b/Practice/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "dict_keys(['data', 'target', 'feature_names', 'DESCR', 'filename'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "       'TAX', 'PTRATIO', 'B', 'LSTAT'], dtype='<U7')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "(506, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "'C:\\\\Users\\\\cm\\\\Anaconda3\\\\lib\\\\site-packages\\\\sklearn\\\\datasets\\\\data\\\\boston_house_prices.csv'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18:34:55] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -172,7 +172,7 @@
        "             silent=None, subsample=1, verbosity=1)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "0.8602355309236762"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "22.650000000000002"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "11.135163981742757"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "       0.03462191, 0.01319523, 0.5334527 ], dtype=float32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,18 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -295,7 +295,7 @@
        "array([0.77955736, 0.85656904, 0.79106707, 0.57326677, 0.41285553])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        " 'v_measure_score']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,18 +376,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:05] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:06] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[17:39:06] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[13:59:31] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -397,7 +397,7 @@
        "       -15.6111833 ])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "0.7769540740816121"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "array([ 0.63919994,  0.71386698,  0.58702344,  0.07923081, -0.25294154])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,16 +479,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8278650088604607"
+       "0.8165086668186075"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,16 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.77896551, 0.84826724, 0.71429488, 0.4785553 , 0.31857985])"
+       "array([0.74786905, 0.83483759, 0.74464522, 0.45112138, 0.38153122])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,16 +527,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1dea913ff48>"
+       "<matplotlib.legend.Legend at 0x1deacc83408>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -592,16 +592,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1dea9673408>"
+       "<matplotlib.legend.Legend at 0x1deac322548>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,14 +684,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time : 00:00:680180\n"
+      "running time : 00:00:679215\n"
      ]
     }
    ],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "[180 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,16 +885,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1deacaac448>"
+       "<matplotlib.legend.Legend at 0x1deac6e4108>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,16 +941,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1deabdb6d08>"
+       "<matplotlib.legend.Legend at 0x1dea9f4d188>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -974,6 +974,13 @@
     "plt.plot(range(1,181), cv_result2.iloc[:,1], c='blue', label='test-rmse-mean,gamma=20')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
