--- a/Practice/keras-tutorial.ipynb
+++ b/Practice/keras-tutorial.ipynb
@@ -2299,9 +2299,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (DataAnalysis)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-ebb3b2a0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2313,7 +2313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
