房价预测练习

--- a/Kaggle/House-price-regression-#1/House-price-regression.ipynb
+++ b/Kaggle/House-price-regression-#1/House-price-regression.ipynb
@@ -1244,7 +1244,12 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1344,7 +1349,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这里面的分类特征有的是有序变量，有的是类别变量"
+    "这里面的分类特征有的是分类有序变量，有的是分类标称变量，需要区别对待"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_ordinal = []\n",
+    "cat_nominal = []"
    ]
   }
  ],
