--- a/Practice/Seaborn-Tutorial.ipynb
+++ b/Practice/Seaborn-Tutorial.ipynb
@@ -2162,7 +2162,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
-  }
+  },
+  "toc-autonumbering": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
