--- a/Kaggle/Seaborn-Tutorial.ipynb
+++ b/Kaggle/Seaborn-Tutorial.ipynb
@@ -21,7 +21,8 @@
     "seaborn的绘图函数里，公用的一些参数含义如下：\n",
     "\n",
     "+ `data`: DataFrame\n",
-    "Tidy (**long-form**) dataframe where each column is a variable and each row is an observation.\n",
+    "Tidy (**long-form**) dataframe where each column is a variable and each row is an observation.  \n",
+    "注意，DF的格式是long-format.\n",
     "\n",
     "+ `hue`: name in data, optional\n",
     "Grouping variable that will produce elements with different colors. Can be either categorical or numeric, although color mapping will behave differently in latter case.\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Visualizing statistical relationships"
+    "# Visualizing statistical relationships"
    ]
   },
   {
@@ -540,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Categorical plots"
+    "# Categorical plots"
    ]
   },
   {
@@ -563,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Categorical **scatterplots** -- 点状图"
+    "## Categorical **scatterplots** -- 点状图"
    ]
   },
   {
@@ -828,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Categorical **distribution** plots -- 分布图"
+    "## Categorical **distribution** plots -- 分布图"
    ]
   },
   {
@@ -1117,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Categorical **estimate** plots -- 估计图"
+    "## Categorical **estimate** plots -- 估计图"
    ]
   },
   {
@@ -1398,7 +1399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Visualizing the distribution of a dataset\n",
+    "# Visualizing the distribution of a dataset\n",
     "\n",
     "用于可视化数据集的分布，这部分的绘图函数最适合做EDA。"
    ]
@@ -1407,7 +1408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 单变量分布"
+    "## 单变量分布"
    ]
   },
   {
@@ -1620,7 +1621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 二元变量的分布"
+    "## 二元变量的分布"
    ]
   },
   {
@@ -1770,7 +1771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 探索数据集中成对变量间的关系"
+    "## 探索数据集中成对变量间的关系"
    ]
   },
   {
@@ -1948,7 +1949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4 其他"
+    "## 其他"
    ]
   },
   {
@@ -1976,7 +1977,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Visualizing linear relationships"
+    "# Visualizing linear relationships"
    ]
   },
   {
@@ -1994,14 +1995,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. 其他有用的绘图函数"
+    "# 其他有用的绘图函数"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1 热力图"
+    "## 热力图"
    ]
   },
   {
@@ -2163,7 +2164,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
   },
-  "toc-autonumbering": false,
+  "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
