--- a/Practice/02-keras-tutorial.ipynb
+++ b/Practice/02-keras-tutorial.ipynb
@@ -2299,9 +2299,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (DataAnalysis)",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "pycharm-ebb3b2a0"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
